# ChatbotMCP

./: .dockerignore  .gitignore  Dockerfile  README.md
.devcontainer/: devcontainer.json
backend/: pyproject.toml  requirements.txt
backend/src/: server.py
backend/src/agent/: extended_mcp_client.py  mcp_testing_agent.py  prompts.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/my-mcp-chat/: index.html  package-lock.json  package.json  vite.config.js
frontend/my-mcp-chat/src/: App.jsx
frontend/src/: App.jsx  index.css
